[package]
name        = "gotenksfs"
version     = "0.0.0"
authors     = ["Carlos Galdino <carloshsgaldino@gmail.com>"]
edition     = "2018"
description = "A filesystem on top of your filesystem"

[dependencies]
clap      = "3.0.0-beta.1"
anyhow    = "1.0"
bincode   = "1.2.1"
byte-unit = { version = "3.1", default-features = false, features = ["std"] }
serde     = { version = "1.0", features = ["derive"] }
crc32fast = "1.2.0"
libc      = "0.2.71"
fuse-rs   = { path = "../fuse-rs", default-features = false, features = ["getattr", "statfs", "init", "destroy"] }
nix       = "0.17.0"
bitvec    = "0.17.4"